Updated the Makefile.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,17 @@
 CC      = gcc
 CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic
+BUILD   = assemble emulate
 
 .SUFFIXES: .c .o
 
 .PHONY: all clean
 
-all: assemble emulate
+all: $(BUILD) 
+
+clean:
+	rm -f $(BUILD) *.o core 
 
 assemble: assemble.o
 
 emulate: emulate.o
 
-clean:
-	rm -f $(wildcard *.o)
-	rm -f assemble
-	rm -f emulate
