--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,7 @@
 CC      = gcc
 CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic
-BUILD   = assemble emulate
+LDLIBS  = -Lutils -lfileInput -lbinaryUtils
+BUILD   = utilsLib assemble emulate
 
 .SUFFIXES: .c .o
 
@@ -10,8 +11,12 @@ all: $(BUILD)
 
 clean:
 	rm -f $(BUILD) *.o core 
+	cd utils; make clean
+
+utilsLib:
+	cd utils; make
 
 assemble: assemble.o
-
-emulate: emulate.o
+emulate: emulate.o 
+emulate.o: binaryUtils.h fileInput.h
 
