Added Makefiles in instruction directiories and made a global header file for common definitions.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,17 +1,23 @@
 CC      = gcc
-CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_BSD_SOURCE -std=c99 -Werror -pedantic
+CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic
+BUILD   = libs assemble emulate
 
 .SUFFIXES: .c .o
 
 .PHONY: all clean
 
-all: assemble emulate
+all: $(BUILD)  
+
+clean:
+	/bin/rm -f $(BUILD) *.o core
+	cd emulator; make clean
+	cd lib; make clean
+
+libs:
+	cd emulator; make
+	cd lib; make
 
 assemble: assemble.o
 
 emulate: emulate.o
 
-clean:
-	rm -f $(wildcard *.o)
-	rm -f assemble
-	rm -f emulate
