Implemented makefile library structure. Now opcode.c in data_processing uses the library lib for binary conversions.

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -1,11 +1,16 @@
 CC     = gcc
 CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic 
-BUILD  = binaryString.o
+LIB    = libbinaryString.a
+LIBOBJ = binaryString.o
+BUILD  = $(LIB) 
 
 all: $(BUILD)
 
 clean: 
 	/bin/rm -f $(BUILD) *.o core
+
+$(LIB): $(LIBOBJ)
+	ar rcs $(LIB) $(LIBOBJ)
 
 binaryString.o: binaryString.h
 
