--- a/src/emulator/multiply/Makefile
+++ b/src/emulator/multiply/Makefile
@@ -1,10 +1,9 @@
 CC     = gcc
 CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic
-BUILD  = branch.o
+BUILD  = multiply.o
 
 all: $(BUILD)
 
 clean: 
 	/bin/rm -f $(BUILD) *.o core
 
-branch.o: branch.c 
