Updated cond.c so that it compiles with -pedantic and uses libraries. Now running make in src works

--- a/src/emulator/Makefile
+++ b/src/emulator/Makefile
@@ -1,7 +1,9 @@
 CC     = gcc
-CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -Idata_processing -Imultiply -Isingle_data_processing -Ibranch
-LDLIBS = -Ldata_processing -lopcode -Lmultiply -lmultiply -Lsingle_data_processing -lsingle_data_processing -Lbranch -lbranch
-BUILD  = libs cond.o 
+CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -Idata_processing -Imultiply -Isingle_data_processing -Ibranch -I../lib
+LDLIBS = -Ldata_processing -lopcode -Lmultiply -lmultiply -Lsingle_data_processing -lsingle_data_processing -Lbranch -lbranch -L../lib -lbinaryString
+LIB    = libcond.a
+LIBOBJ = cond.o
+BUILD  = libs $(LIB) 
 
 all: $(BUILD) 
 
@@ -11,11 +13,16 @@ clean:
 	cd multiply; make clean
 	cd single_data_processing; make clean
 	cd branch; make clean
+	cd ../lib; make clean
 	
 libs: 
 	cd data_processing; make 
 	cd multiply; make 
 	cd single_data_processing; make 
 	cd branch; make 
+	cd ../lib; make
+
+$(LIB): $(LIBOBJ)
+	ar rcs $(LIB) $(LIBOBJ)
 
 cond.o: cond.h
