Fixed a bug in src/Makefile now emulate.c compiles correctly.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 CC      = gcc
-CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -Iemulator/data_processing -Iemulator/multiply -Iemulator/branch -Iemulator/single_data_processing -Ilib 
+CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -Iemulator/data_processing -Iemulator/multiply -Iemulator/branch -Iemulator/single_data_processing -Ilib -Iemulator 
 LDLIBS  = -Lemulator/data_processing -lopcode -Lemulator/multiply -lmultiply -Lemulator/branch -lbranch -Lemulator/single_data_processing -lsingle_data_processing -Lemulator -lcond
 BUILD   = libs assemble emulate
 
