--- a/src/emulator/branch/Makefile
+++ b/src/emulator/branch/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -
 LDLIBS = -L../../lib -lbinaryString
 LIB    = libbranch.a
 LIBOBJ = branch.o
-BUILD  = libs $(LIB)
+BUILD  = $(LIB)
 
 all: $(BUILD)
 
@@ -13,6 +13,4 @@ clean:
 $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
-libs: 
-	cd ../../lib; make
 
