--- a/src/emulator/single_data_processing/Makefile
+++ b/src/emulator/single_data_processing/Makefile
@@ -1,6 +1,6 @@
 CC     = gcc
-CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../../lib
-LDLIBS = -L../../lib -lbinaryString
+CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../../lib -I../common_functions
+LDLIBS = -L../../lib -lbinaryString -L../common_functions/common -lcommon
 LIB    = libsingle_data_processing.a
 LIBOBJ = single_data_processing.o
 BUILD  = $(LIB)
