Single data transfer module is now complete with its header file.

--- a/src/emulator/Makefile
+++ b/src/emulator/Makefile
@@ -6,7 +6,7 @@ clean:
 	cd cond; make clean
 	cd data_processing; make clean
 	cd branch; make clean
-	cd single_data_processing; make clean
+	cd single_data_transfer; make clean
 	cd multiply; make clean
 	cd common_functions; make clean
 	
@@ -14,7 +14,7 @@ libs:
 	cd ../lib; make
 	cd cond; make
 	cd branch; make
-	cd single_data_processing; make
+	cd single_data_transfer; make
 	cd multiply; make
 	cd data_processing; make
 	cd common_functions; make
