--- a/src/emulator/single_data_transfer/Makefile
+++ b/src/emulator/single_data_transfer/Makefile
@@ -1,8 +1,8 @@
 CC     = gcc
 CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../../lib -I../common_functions
 LDLIBS = -L../../lib -lbinaryString -L../common_functions/common -lcommon
-LIB    = libsingle_data_processing.a
-LIBOBJ = single_data_processing.o
+LIB    = libsingle_data_transfer.a
+LIBOBJ = single_data_transfer.o
 BUILD  = $(LIB)
 
 all: $(BUILD)
