--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -2,7 +2,7 @@ CC     = gcc
 CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic 
 LIB    = libbinaryString.a
 LIBOBJ = binaryString.o
-BUILD  = $(LIB) 
+BUILD  = binaryString_test $(LIB) 
 
 all: $(BUILD)
 
@@ -13,4 +13,6 @@ $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
 binaryString.o: binaryString.h
+binaryString_test: binaryString_test.o binaryString.o
+binaryString_test.o: binaryString.h
 
