Added a test for single_data_transfer

--- a/src/emulator/single_data_transfer/Makefile
+++ b/src/emulator/single_data_transfer/Makefile
@@ -1,9 +1,9 @@
 CC     = gcc
 CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../../lib -I../common_functions
-LDLIBS = -L../../lib -lbinaryString -L../common_functions/common -lcommon
+LDLIBS = -L../../lib -lbinaryString -L../common_functions/ -lcommon
 LIB    = libsingle_data_transfer.a
 LIBOBJ = single_data_transfer.o
-BUILD  = $(LIB)
+BUILD  = $(LIB) single_data_transfer 
 
 all: $(BUILD)
 
@@ -13,3 +13,7 @@ clean:
 $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
+single_data_transfer.o: single_data_transfer.h
+single_data_transfer: single_data_transfer.o
+single_data_transfer_test: single_data_transfer_test.o single_data_transfer.o 
+single_data_transfer_test.o: single_data_transfer.h
