--- a/src/emulator/single_data_transfer/Makefile
+++ b/src/emulator/single_data_transfer/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -
 LDLIBS = -L../../lib -lbinaryString -L../common_functions/ -lcommon
 LIB    = libsingle_data_transfer.a
 LIBOBJ = single_data_transfer.o
-BUILD  = $(LIB) single_data_transfer 
+BUILD  = $(LIB) single_data_transfer_test
 
 all: $(BUILD)
 
@@ -13,7 +13,6 @@ clean:
 $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
-single_data_transfer.o: single_data_transfer.h
-single_data_transfer: single_data_transfer.o
 single_data_transfer_test: single_data_transfer_test.o single_data_transfer.o 
 single_data_transfer_test.o: single_data_transfer.h
+single_data_transfer.o: single_data_transfer.h
