--- a/src/emulator/branch/Makefile
+++ b/src/emulator/branch/Makefile
@@ -3,9 +3,11 @@ CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -
 LDLIBS = -L../../lib -lbinaryString
 LIB    = libbranch.a
 LIBOBJ = branch.o
-BUILD  = $(LIB) branch_test
+BUILD  = $(LIB)
 
 all: $(BUILD)
+
+test: branch_test
 
 clean: 
 	/bin/rm -f $(BUILD) *.o core
