--- a/src/emulator/branch/Makefile
+++ b/src/emulator/branch/Makefile
@@ -1,6 +1,6 @@
 CC     = gcc
-CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../../lib
-LDLIBS = -L../../lib -lbinaryString
+CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../common_functions
+LDLIBS = -L../common_functions -lcommon
 LIB    = libbranch.a
 LIBOBJ = branch.o
 BUILD  = $(LIB)
