Added skeleton files and populated Makefiles in each directory.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CC      = gcc
-CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -Iemulator/data_processing -Iemulator/multiply -Iemulator/branch -Iemulator/single_data_transfer -Iemulator/cond -Iemulator/common_functions -Iemulator/gpio 
-LDLIBS  = -Lemulator/data_processing -ldata_processing -Lemulator/multiply -lmultiply -Lemulator/branch -lbranch -Lemulator/single_data_transfer -lsingle_data_transfer -Lemulator/cond -lcond -Lemulator/common_functions -lcommon -Lemulator/gpio -lgpio
+CFLAGS  = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -Iemulator/data_processing -Iemulator/multiply -Iemulator/branch -Iemulator/single_data_transfer -Iemulator/cond -Iemulator/common_functions -Iemulator/gpio -Iassembler/data_processing -Iassembler/multiply -Iassembler/single_data_transfer -Iassembler/branch
+LDLIBS  = -Lemulator/data_processing -ldata_processing -Lemulator/multiply -lmultiply -Lemulator/branch -lbranch -Lemulator/single_data_transfer -lsingle_data_transfer -Lemulator/cond -lcond -Lemulator/common_functions -lcommon -Lemulator/gpio -lgpio -Lassembler/data_processing -ldata_processing -Lassembler/mulitply -lmultiply -Lassembler/single_data_transfer -lsingle_data_transfer -Lassembler/branch -lbranch
 BUILD   = libs assemble emulate
 
 .SUFFIXES: .c .o
@@ -15,6 +15,7 @@ clean:
 
 libs:
 	cd emulator; make
+	cd assembler; make
 
 assemble: assemble.o
 
