--- a/src/assembler/Makefile
+++ b/src/assembler/Makefile
@@ -3,9 +3,11 @@ all:
 	cd multiply; make
 	cd single_data_transfer; make
 	cd branch; make
+	cd symbol_table; make
 
 clean:
 	cd data_processing; make clean
 	cd multiply; make clean
 	cd single_data_transfer; make clean
 	cd branch; make clean
+	cd symbol_table; make clean
