Branch instructions assembler has been implemented and tested.

--- a/src/assembler/branch/Makefile
+++ b/src/assembler/branch/Makefile
@@ -13,7 +13,12 @@ clean:
 $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
+test: branch_test
+
 branch.o: branch.h
+
+branch_test: branch_test.o branch.o
+branch_test.o: branch.h
 
 
 
