First implementation for sdt assembly is done, test from page 17 passes.

--- a/src/assembler/single_data_transfer/Makefile
+++ b/src/assembler/single_data_transfer/Makefile
@@ -12,4 +12,9 @@ clean:
 $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
+test: single_data_transfer_test
+
 single_data_transfer.o: single_data_transfer.h
+
+single_data_transfer_test: single_data_transfer_test.o single_data_transfer.o
+single_data_transfer_test.o: single_data_transfer.h
