--- a/src/assembler/Makefile
+++ b/src/assembler/Makefile
@@ -6,10 +6,11 @@ clean:
 	cd single_data_transfer; make clean
 	cd branch; make clean
 	cd symbol_table; make clean
-
+	cd special; make clean
 libs: 
 	cd data_processing; make
 	cd multiply; make
 	cd single_data_transfer; make
 	cd branch; make
 	cd symbol_table; make
+	cd special; make
