Starting on shift functionality in data processing

--- a/src/assembler/branch/Makefile
+++ b/src/assembler/branch/Makefile
@@ -1,5 +1,6 @@
 CC     = gcc
-CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic
+CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../symbol_table
+LDLIBS = -L../symbol_table -lsymbol_table
 LIB    = libbranch.a
 LIBOBJ = branch.o
 BUILD  = $(LIB)
@@ -12,7 +13,12 @@ clean:
 $(LIB): $(LIBOBJ)
 	ar rcs $(LIB) $(LIBOBJ)
 
+test: branch_test
+
 branch.o: branch.h
+
+branch_test: branch_test.o branch.o
+branch_test.o: branch.h
 
 
 
