Debugging sdt: checkpoint 1, 7 new test cases pass.

--- a/src/assembler/single_data_transfer/Makefile
+++ b/src/assembler/single_data_transfer/Makefile
@@ -1,7 +1,8 @@
 CC     = gcc
-CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic 
+CFLAGS = -Wall -g -D_POSIX_SOURCE -D_DEFAULT_SOURCE -std=c99 -Werror -pedantic -I../data_processing
 LIB    = libsingle_data_transfer.a
 LIBOBJ = single_data_transfer.o
+LDLIBS = -L../data_processing -ldata_processing
 BUILD  = $(LIB) 
 
 all: $(BUILD)
