Added tests for data_processing.

--- a/src/assembler/Makefile
+++ b/src/assembler/Makefile
@@ -18,7 +18,7 @@ libs:
 
 test: 
 	cd test_utils; make
-	#cd data_processing; make test
+	cd data_processing; make test
 	#cd multiply; make test
 	cd single_data_transfer; make test
 	cd branch; make test
